tests/es6modules/es6modules.exp
Error ----------------------------------------------------------------------------------------------- es6modules.js:7:18

Cannot assign `DefaultA.numberValue1` to `a2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:7:18
   7| var a2: string = DefaultA.numberValue1; // Error: number ~> string
                       ^^^^^^^^^^^^^^^^^^^^^

References:
   A.js:1:24
   1| exports.numberValue1 = 42;
                             ^^ [1]
   es6modules.js:7:9
   7| var a2: string = DefaultA.numberValue1; // Error: number ~> string
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:12:18

Cannot assign `DefaultB.numberValue` to `b2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:12:18
   12| var b2: string = DefaultB.numberValue; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^

References:
   B.js:1:23
    1| exports.numberValue = 42;
                             ^^ [1]
   es6modules.js:12:9
   12| var b2: string = DefaultB.numberValue; // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:21:9

Cannot import `doesntExist1` because there is no `doesntExist1` export in `./CommonJS_Clobbering_Lit`. [missing-export]

   21| import {doesntExist1} from "./CommonJS_Clobbering_Lit"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:25:18

Cannot assign `numberValue1` to `c2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:25:18
   25| var c2: string = numberValue1; // Error: number ~> string
                        ^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:2:17
    2|   numberValue1: 1,
                       ^ [1]
   es6modules.js:25:9
   25| var c2: string = numberValue1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:29:18

Cannot assign `numVal1` to `d2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:29:18
   29| var d2: string = numVal1; // Error: number ~> string
                        ^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:3:17
    3|   numberValue2: 2,
                       ^ [1]
   es6modules.js:29:9
   29| var d2: string = numVal1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:33:18

Cannot assign `CJS_Clobb_Lit.numberValue3` to `e2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:33:18
   33| var e2: string = CJS_Clobb_Lit.numberValue3; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:4:17
    4|   numberValue3: 3,
                       ^ [1]
   es6modules.js:33:9
   33| var e2: string = CJS_Clobb_Lit.numberValue3; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:34:15

Cannot get `CJS_Clobb_Lit.doesntExist` because property `doesntExist` is missing in object literal [1]. [prop-missing]

   es6modules.js:34:15
   34| CJS_Clobb_Lit.doesntExist; // Error: doesntExist isn't a property
                     ^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:1:18
                        v
    1| module.exports = {
    2|   numberValue1: 1,
    3|   numberValue2: 2,
    4|   numberValue3: 3,
    5|   numberValue4: 4,
    6|   numberValue5: 5
    7| };
       ^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:39:26

Cannot get `CJS_Clobb_Lit_NS.default.default` because property `default` is missing in object literal [1].
[prop-missing]

   es6modules.js:39:26
   39| CJS_Clobb_Lit_NS.default.default; // Error: No 'default' property on the exported obj
                                ^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:1:18
                        v
    1| module.exports = {
    2|   numberValue1: 1,
    3|   numberValue2: 2,
    4|   numberValue3: 3,
    5|   numberValue4: 4,
    6|   numberValue5: 5
    7| };
       ^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:40:18

Cannot assign `CJS_Clobb_Lit_NS.numberValue4` to `f3` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:40:18
   40| var f3: string = CJS_Clobb_Lit_NS.numberValue4; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:5:17
    5|   numberValue4: 4,
                       ^ [1]
   es6modules.js:40:9
   40| var f3: string = CJS_Clobb_Lit_NS.numberValue4; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:41:18

Cannot assign `CJS_Clobb_Lit_NS.default.numberValue5` to `f4` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:41:18
   41| var f4: string = CJS_Clobb_Lit_NS.default.numberValue5; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:6:17
    6|   numberValue5: 5
                       ^ [1]
   es6modules.js:41:9
   41| var f4: string = CJS_Clobb_Lit_NS.default.numberValue5; // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:47:9

Cannot import `doesntExist2` because there is no `doesntExist2` export in `./CommonJS_Clobbering_Class`. Did you mean
`import doesntExist2 from "..."`? [missing-export]

   47| import {doesntExist2} from "./CommonJS_Clobbering_Class"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- es6modules.js:53:9

Cannot import `staticNumber1` because there is no `staticNumber1` export in `./CommonJS_Clobbering_Class`. Did you mean
`import staticNumber1 from "..."`? [missing-export]

   53| import {staticNumber1, baseProp, childProp} from "./CommonJS_Clobbering_Class"; // Error
               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:53:24

Cannot import `baseProp` because there is no `baseProp` export in `./CommonJS_Clobbering_Class`. Did you mean
`import baseProp from "..."`? [missing-export]

   53| import {staticNumber1, baseProp, childProp} from "./CommonJS_Clobbering_Class"; // Error
                              ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:53:34

Cannot import `childProp` because there is no `childProp` export in `./CommonJS_Clobbering_Class`. Did you mean
`import childProp from "..."`? [missing-export]

   53| import {staticNumber1, baseProp, childProp} from "./CommonJS_Clobbering_Class"; // Error
                                        ^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:57:23

Cannot get `(new CJS_Clobb_Class()).doesntExist` because property `doesntExist` is missing in `Test` [1]. [prop-missing]

   es6modules.js:57:23
   57| new CJS_Clobb_Class().doesntExist; // Error: Class has no `doesntExist` property
                             ^^^^^^^^^^^

References:
   es6modules.js:57:1
   57| new CJS_Clobb_Class().doesntExist; // Error: Class has no `doesntExist` property
       ^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:59:18

Cannot assign `CJS_Clobb_Class.staticNumber2()` to `h2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:59:18
   59| var h2: string = CJS_Clobb_Class.staticNumber2(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:9:26
    9|   static staticNumber2():number { return 2; }
                                ^^^^^^ [1]
   es6modules.js:59:9
   59| var h2: string = CJS_Clobb_Class.staticNumber2(); // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:61:18

Cannot assign `(new CJS_Clobb_Class()).instNumber1()` to `h4` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:61:18
   61| var h4: string = new CJS_Clobb_Class().instNumber1(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:12:17
   12|   instNumber1():number { return 1; }
                       ^^^^^^ [1]
   es6modules.js:61:9
   61| var h4: string = new CJS_Clobb_Class().instNumber1(); // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:64:5

Cannot use `new` on module `./CommonJS_Clobbering_Class` [1]. Only classes can be constructed. [invalid-constructor]

   es6modules.js:64:5
   64| new CJS_Clobb_Class_NS(); // Error: Namespace object isn't constructable
           ^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:65:37

Cannot call `CJS_Clobb_Class_NS.staticNumber3` because property `staticNumber3` is missing in module
`./CommonJS_Clobbering_Class` [1]. [prop-missing]

   es6modules.js:65:37
   65| var i1: number = CJS_Clobb_Class_NS.staticNumber3(); // Error: Class statics not copied to Namespace object
                                           ^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:67:18

Cannot assign `(new CJS_Clobb_Class_NS.default()).instNumber2()` to `i3` because number [1] is incompatible with
string [2]. [incompatible-type]

   es6modules.js:67:18
   67| var i3: string = new CJS_Clobb_Class_NS.default().instNumber2(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:13:17
   13|   instNumber2():number { return 2; }
                       ^^^^^^ [1]
   es6modules.js:67:9
   67| var i3: string = new CJS_Clobb_Class_NS.default().instNumber2(); // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:73:9

Cannot import `doesntExist3` because there is no `doesntExist3` export in `./CommonJS_Named`. [missing-export]

   73| import {doesntExist3} from "./CommonJS_Named"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:77:18

Cannot assign `numberValue2` to `j2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:77:18
   77| var j2: string = numberValue2; // Error: number ~> string
                        ^^^^^^^^^^^^

References:
   CommonJS_Named.js:2:24
    2| exports.numberValue2 = 2;
                              ^ [1]
   es6modules.js:77:9
   77| var j2: string = numberValue2; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:81:18

Cannot assign `numVal3` to `k2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:81:18
   81| var k2: string = numVal3; // Error: number ~> string
                        ^^^^^^^

References:
   CommonJS_Named.js:3:24
    3| exports.numberValue3 = 3;
                              ^ [1]
   es6modules.js:81:9
   81| var k2: string = numVal3; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:85:18

Cannot assign `CJS_Named.numberValue1` to `l2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:85:18
   85| var l2: string = CJS_Named.numberValue1; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:1:24
    1| exports.numberValue1 = 1;
                              ^ [1]
   es6modules.js:85:9
   85| var l2: string = CJS_Named.numberValue1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:86:11

Cannot get `CJS_Named.doesntExist` because property `doesntExist` is missing in module `./CommonJS_Named` [1].
[prop-missing]

   es6modules.js:86:11
   86| CJS_Named.doesntExist; // Error: doesntExist isn't a property
                 ^^^^^^^^^^^

References:
   CommonJS_Named.js
   ^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:90:18

Cannot assign `CJS_Named_NS.default.numberValue4` to `m2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:90:18
   90| var m2: string = CJS_Named_NS.default.numberValue4; // Error: CommonJS_Named has no default export
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:4:24
    4| exports.numberValue4 = 4;
                              ^ [1]
   es6modules.js:90:9
   90| var m2: string = CJS_Named_NS.default.numberValue4; // Error: CommonJS_Named has no default export
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:91:18

Cannot assign `CJS_Named_NS.numberValue4` to `m3` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:91:18
   91| var m3: string = CJS_Named_NS.numberValue4; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:4:24
    4| exports.numberValue4 = 4;
                              ^ [1]
   es6modules.js:91:9
   91| var m3: string = CJS_Named_NS.numberValue4; // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:97:9

Cannot import `doesntExist4` because there is no `doesntExist4` export in `./ES6_Default_AnonFunction1`. Did you mean
`import doesntExist4 from "..."`? [missing-export]

   97| import {doesntExist4} from "./ES6_Default_AnonFunction1"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:101:18

Cannot assign `ES6_Def_AnonFunc1()` to `n2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:101:18
   101| var n2: string = ES6_Def_AnonFunc1(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonFunction1.js:1:27
     1| export default function():number { return 42; }
                                  ^^^^^^ [1]
   es6modules.js:101:9
   101| var n2: string = ES6_Def_AnonFunc1(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:105:18

Cannot assign `ES6_Def_NamedFunc1()` to `o2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:105:18
   105| var o2: string = ES6_Def_NamedFunc1(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedFunction1.js:1:31
     1| export default function foo():number { return 42; }
                                      ^^^^^^ [1]
   es6modules.js:105:9
   105| var o2: string = ES6_Def_NamedFunc1(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:109:18

Cannot assign `(new ES6_Def_AnonClass1()).givesANum()` to `p2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:109:18
   109| var p2: string = new ES6_Def_AnonClass1().givesANum(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonClass1.js:1:37
     1| export default class { givesANum(): number { return 42; }};
                                            ^^^^^^ [1]
   es6modules.js:109:9
   109| var p2: string = new ES6_Def_AnonClass1().givesANum(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:113:18

Cannot assign `(new ES6_Def_NamedClass1()).givesANum()` to `q2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:113:18
   113| var q2: string = new ES6_Def_NamedClass1().givesANum(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedClass1.js:1:41
     1| export default class Foo { givesANum(): number { return 42; }};
                                                ^^^^^^ [1]
   es6modules.js:113:9
   113| var q2: string = new ES6_Def_NamedClass1().givesANum(); // Error: number ~> string
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:119:8

Cannot import a default export because there is no default export in `./ES6_Named1`. [missing-export]

   119| import doesntExist5 from "./ES6_Named1"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:123:18

Cannot assign `specifierNumber1_1` to `r2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:123:18
   123| var r2: string = specifierNumber1_1; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:1:26
     1| const specifierNumber1 = 1;
                                 ^ [1]
   es6modules.js:123:9
   123| var r2: string = specifierNumber1_1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:127:18

Cannot assign `specifierNumber2Renamed` to `s2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:127:18
   127| var s2: string = specifierNumber2Renamed; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:2:26
     2| const specifierNumber2 = 2;
                                 ^ [1]
   es6modules.js:127:9
   127| var s2: string = specifierNumber2Renamed; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:131:18

Cannot assign `specifierNumber3Renamed` to `t2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:131:18
   131| var t2: string = specifierNumber3Renamed; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:3:26
     3| const specifierNumber3 = 3;
                                 ^ [1]
   es6modules.js:131:9
   131| var t2: string = specifierNumber3Renamed; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:136:18

Cannot assign `groupedSpecifierNumber1` to `u3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:136:18
   136| var u3: string = groupedSpecifierNumber1; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:4:33
     4| const groupedSpecifierNumber1 = 1;
                                        ^ [1]
   es6modules.js:136:9
   136| var u3: string = groupedSpecifierNumber1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:137:18

Cannot assign `groupedSpecifierNumber2` to `u4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:137:18
   137| var u4: string = groupedSpecifierNumber2; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:5:33
     5| const groupedSpecifierNumber2 = 2;
                                        ^ [1]
   es6modules.js:137:9
   137| var u4: string = groupedSpecifierNumber2; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:141:18

Cannot assign `givesANumber()` to `v2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:141:18
   141| var v2: string = givesANumber(); // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:12:33
    12| export function givesANumber(): number { return 42; };
                                        ^^^^^^ [1]
   es6modules.js:141:9
   141| var v2: string = givesANumber(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:145:18

Cannot assign `(new NumberGenerator()).givesANumber()` to `w2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:145:18
   145| var w2: string = new NumberGenerator().givesANumber(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:13:48
    13| export class NumberGenerator { givesANumber(): number { return 42; }};
                                                       ^^^^^^ [1]
   es6modules.js:145:9
   145| var w2: string = new NumberGenerator().givesANumber(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:150:18

Cannot assign `varDeclNumber1` to `x3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:150:18
   150| var x3: string = varDeclNumber1; // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:15:31
    15| export const varDeclNumber1 = 1, varDeclNumber2 = 2;
                                      ^ [1]
   es6modules.js:150:9
   150| var x3: string = varDeclNumber1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:151:18

Cannot assign `varDeclNumber2` to `x4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:151:18
   151| var x4: string = varDeclNumber2; // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:15:51
    15| export const varDeclNumber1 = 1, varDeclNumber2 = 2;
                                                          ^ [1]
   es6modules.js:151:9
   151| var x4: string = varDeclNumber2; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:155:18

Cannot assign `destructuredObjNumber` to `y2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:155:18
   155| var y2: string = destructuredObjNumber; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:16:64
    16| export const {destructuredObjNumber} = {destructuredObjNumber: 1};
                                                                       ^ [1]
   es6modules.js:155:9
   155| var y2: string = destructuredObjNumber; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:159:18

Cannot assign `destructuredArrNumber` to `z2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:159:18
   159| var z2: string = destructuredArrNumber; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:17:41
    17| export const [destructuredArrNumber] = [1]
                                                ^ [1]
   es6modules.js:159:9
   159| var z2: string = destructuredArrNumber; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:163:19

Cannot assign `numberValue4` to `aa2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:163:19
   163| var aa2: string = numberValue4; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source1.js:1:29
     1| export const numberValue1 = 1, numberValue2 = 2;
                                    ^ [1]
   es6modules.js:163:10
   163| var aa2: string = numberValue4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:167:19

Cannot assign `numberValue2_renamed` to `ab2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:167:19
   167| var ab2: string = numberValue2_renamed; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source1.js:1:47
     1| export const numberValue1 = 1, numberValue2 = 2;
                                                      ^ [1]
   es6modules.js:167:10
   167| var ab2: string = numberValue2_renamed; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:171:19

Cannot assign `numberValue5` to `ac2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:171:19
   171| var ac2: string = numberValue5; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source1.js:1:29
     1| export const numberValue1 = 1;
                                    ^ [1]
   es6modules.js:171:10
   171| var ac2: string = numberValue5; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:177:40

Cannot get `require(...).doesntExist` because property `doesntExist` is missing in module
`./ES6_Default_AnonFunction2` [1]. [prop-missing]

   es6modules.js:177:40
   177| require('./ES6_Default_AnonFunction2').doesntExist; // Error: 'doesntExist' isn't an export
                                               ^^^^^^^^^^^

References:
   es6modules.js:177:1
   177| require('./ES6_Default_AnonFunction2').doesntExist; // Error: 'doesntExist' isn't an export
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- es6modules.js:181:19

Cannot assign `ES6_Def_AnonFunc2()` to `ad2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:181:19
   181| var ad2: string = ES6_Def_AnonFunc2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonFunction2.js:1:27
     1| export default function():number { return 42; }
                                  ^^^^^^ [1]
   es6modules.js:181:10
   181| var ad2: string = ES6_Def_AnonFunc2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:185:19

Cannot assign `ES6_Def_NamedFunc2()` to `ae2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:185:19
   185| var ae2: string = ES6_Def_NamedFunc2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedFunction2.js:1:31
     1| export default function foo():number { return 42; }
                                      ^^^^^^ [1]
   es6modules.js:185:10
   185| var ae2: string = ES6_Def_NamedFunc2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:189:19

Cannot assign `(new ES6_Def_AnonClass2()).givesANum()` to `af2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:189:19
   189| var af2: string = new ES6_Def_AnonClass2().givesANum(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonClass2.js:1:37
     1| export default class { givesANum(): number { return 42; }};
                                            ^^^^^^ [1]
   es6modules.js:189:10
   189| var af2: string = new ES6_Def_AnonClass2().givesANum(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:193:19

Cannot assign `(new ES6_Def_NamedClass2()).givesANum()` to `ag2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:193:19
   193| var ag2: string = new ES6_Def_NamedClass2().givesANum(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedClass2.js:1:41
     1| export default class Foo { givesANum(): number { return 42; }};
                                                ^^^^^^ [1]
   es6modules.js:193:10
   193| var ag2: string = new ES6_Def_NamedClass2().givesANum(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:201:19

Cannot assign `specifierNumber4` to `ah2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:201:19
   201| var ah2: string = specifierNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:1:26
     1| const specifierNumber4 = 1;
                                 ^ [1]
   es6modules.js:201:10
   201| var ah2: string = specifierNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:205:19

Cannot assign `specifierNumber5Renamed` to `ai2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:205:19
   205| var ai2: string = specifierNumber5Renamed; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:2:26
     2| const specifierNumber5 = 2;
                                 ^ [1]
   es6modules.js:205:10
   205| var ai2: string = specifierNumber5Renamed; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:211:19

Cannot assign `groupedSpecifierNumber3` to `aj3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:211:19
   211| var aj3: string = groupedSpecifierNumber3; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:3:33
     3| const groupedSpecifierNumber3 = 1;
                                        ^ [1]
   es6modules.js:211:10
   211| var aj3: string = groupedSpecifierNumber3; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:212:19

Cannot assign `groupedSpecifierNumber4` to `aj4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:212:19
   212| var aj4: string = groupedSpecifierNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:4:33
     4| const groupedSpecifierNumber4 = 2;
                                        ^ [1]
   es6modules.js:212:10
   212| var aj4: string = groupedSpecifierNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:216:19

Cannot assign `givesANumber2()` to `ak2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:216:19
   216| var ak2: string = givesANumber2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:10:34
    10| export function givesANumber2(): number { return 42; };
                                         ^^^^^^ [1]
   es6modules.js:216:10
   216| var ak2: string = givesANumber2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:220:19

Cannot assign `(new NumberGenerator2()).givesANumber()` to `al2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:220:19
   220| var al2: string = new NumberGenerator2().givesANumber(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:11:49
    11| export class NumberGenerator2 { givesANumber(): number { return 42; }};
                                                        ^^^^^^ [1]
   es6modules.js:220:10
   220| var al2: string = new NumberGenerator2().givesANumber(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:226:19

Cannot assign `varDeclNumber3` to `am3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:226:19
   226| var am3: string = varDeclNumber3; // Error: number ~> string
                          ^^^^^^^^^^^^^^

References:
   ES6_Named2.js:13:31
    13| export const varDeclNumber3 = 1, varDeclNumber4 = 2;
                                      ^ [1]
   es6modules.js:226:10
   226| var am3: string = varDeclNumber3; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:227:19

Cannot assign `varDeclNumber4` to `am4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:227:19
   227| var am4: string = varDeclNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^

References:
   ES6_Named2.js:13:51
    13| export const varDeclNumber3 = 1, varDeclNumber4 = 2;
                                                          ^ [1]
   es6modules.js:227:10
   227| var am4: string = varDeclNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:231:19

Cannot assign `destructuredObjNumber2` to `an2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:231:19
   231| var an2: string = destructuredObjNumber2; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:14:66
    14| export const {destructuredObjNumber2} = {destructuredObjNumber2: 1};
                                                                         ^ [1]
   es6modules.js:231:10
   231| var an2: string = destructuredObjNumber2; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:235:19

Cannot assign `destructuredArrNumber2` to `ao2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:235:19
   235| var ao2: string = destructuredArrNumber2; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:15:42
    15| export const [destructuredArrNumber2] = [1]
                                                 ^ [1]
   es6modules.js:235:10
   235| var ao2: string = destructuredArrNumber2; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:239:19

Cannot assign `numberValue6` to `ap2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:239:19
   239| var ap2: string = numberValue6; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source2.js:1:29
     1| export const numberValue1 = 1, numberValue2 = 2;
                                    ^ [1]
   es6modules.js:239:10
   239| var ap2: string = numberValue6; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:243:19

Cannot assign `numberValue2_renamed2` to `aq2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:243:19
   243| var aq2: string = numberValue2_renamed2; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source2.js:1:47
     1| export const numberValue1 = 1, numberValue2 = 2;
                                                      ^ [1]
   es6modules.js:243:10
   243| var aq2: string = numberValue2_renamed2; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:247:19

Cannot assign `numberValue7` to `ar2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:247:19
   247| var ar2: string = numberValue7; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source2.js:1:29
     1| export const numberValue2 = 1;
                                    ^ [1]
   es6modules.js:247:10
   247| var ar2: string = numberValue7; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:256:19

Cannot assign `defaultNum` to `as2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:256:19
   256| var as2: string = defaultNum; // Error: number ~> string
                          ^^^^^^^^^^

References:
   ES6_DefaultAndNamed.js:1:16
     1| export default 42;
                       ^^ [1]
   es6modules.js:256:10
   256| var as2: string = defaultNum; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:259:19

Cannot assign `namedStr` to `as4` because string [1] is incompatible with number [2]. [incompatible-type]

   es6modules.js:259:19
   259| var as4: number = namedStr; // Error: string ~> number
                          ^^^^^^^^

References:
   ES6_DefaultAndNamed.js:2:20
     2| export const str = 'asdf';
                           ^^^^^^ [1]
   es6modules.js:259:10
   259| var as4: number = namedStr; // Error: string ~> number
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:270:8

Cannot import a default export because there is no default export in `./ES6_Named1`. Did you mean
`import {specifierNumber1} from "./ES6_Named1"`? [missing-export]

   270| import specifierNumber1 from "./ES6_Named1"; // Error: Did you mean `import {specifierNumber1} from ...`?
               ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:271:9

Cannot import `specifierNumber` because there is no `specifierNumber` export in `./ES6_Named1`. Did you mean
`specifierNumber1`? [missing-export]

   271| import {specifierNumber} from "./ES6_Named1"; // Error: Did you mean `specifierNumber1`?
                ^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:282:19

Cannot assign `numberValue8` to `at2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:282:19
   282| var at2: string = numberValue8; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source1.js:1:29
     1| export const numberValue1 = 1;
                                    ^ [1]
   es6modules.js:282:10
   282| var at2: string = numberValue8; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:285:19

Cannot assign `numberValue9` to `at4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:285:19
   285| var at4: string = numberValue9; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source2.js:1:29
     1| export const numberValue2 = 1;
                                    ^ [1]
   es6modules.js:285:10
   285| var at4: string = numberValue9; // Error: number ~> string
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:290:9

Cannot import the type `typeAlias` as a value. Use `import type` instead. [import-type-as-value]

   290| import {typeAlias} from "./ExportType"; // Error: Cannot vanilla-import a type alias!
                ^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:292:9

Cannot import the type `I` as a value. Use `import type` instead. [import-type-as-value]

   292| import {I} from "./ExportInterface"; // Error: import-type-as-value
                ^


Error ---------------------------------------------------------------------------------- test_imports_are_frozen.js:7:10

Cannot assign `123` to `DefaultA.numberValue1` because property `numberValue1` is not writable. [cannot-write]

   7| DefaultA.numberValue1 = 123; // Error: DefaultA is frozen
               ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:11:12

Cannot assign `123` to `ES6_Named1.varDeclNumber1` because property `varDeclNumber1` is not writable. [cannot-write]

   11| ES6_Named1.varDeclNumber1 = 123; // Error: ES6_Named1 is frozen
                  ^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:15:15

Cannot assign `123` to `CommonJS_Star.numberValue1` because property `numberValue1` is not writable. [cannot-write]

   15| CommonJS_Star.numberValue1 = 123; // Error: frozen
                     ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:23:22

Cannot assign `123` to `CommonJS_Frozen_Star.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   23| CommonJS_Frozen_Star.numberValue1 = 123; // Error: frozen
                            ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:24:30

Cannot assign `123` to `CommonJS_Frozen_Star.default.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   24| CommonJS_Frozen_Star.default.numberValue1 = 123; // Error: frozen
                                    ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:27:28

Cannot assign `123` to `CommonJS_Clobbering_Frozen.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   27| CommonJS_Clobbering_Frozen.numberValue1 = 123; // Error: exports are frozen
                                  ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:37:12

Cannot assign `123` to `DefaultA.numberValue1` because property `numberValue1` is not writable. [cannot-write]

   37|   DefaultA.numberValue1 = 123; // error: prop is not writable
                  ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:41:14

Cannot assign `123` to `ES6_Named1.numberValue` because property `numberValue` is not writable. [cannot-write]

   41|   ES6_Named1.numberValue = 123; // error, es6 exports are frozen
                    ^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:49:24

Cannot assign `123` to `CommonJS_Frozen_Star.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   49|   CommonJS_Frozen_Star.numberValue1 = 123; // Error: frozen
                              ^^^^^^^^^^^^



Found 82 errors
